[package]
name = "arsd"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-close", "window-hide", "window-create", "clipboard-write-text", "clipboard-read-text", "cli", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.56.1"
aws-sdk-sso = "0.33.0"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
