[package]
name = "arsd"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ryan Scott Brown <sb@ryansb.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [ "config-json5" ] }

[dependencies]
aws-config = "0.56.1"
aws-region = "0.25.4"
aws-sdk-sso = "0.33.0"
aws-sdk-ssooidc = "0.33.0"
chrono = { version = "0.4.31", features = [ "serde" ] }
config = { version = "0.13.1", features = [ "yaml" ] }
log = "^0.4"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = [ "json" ] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", ] }
serde = { version = "1.0", features = [ "derive" ] }
serde-aux = "*"
serde_derive = "1.0.192"
serde_ini = "*"
serde_json = "1.0"
serde_rusqlite = "0.33.1"
tauri = { version = "1.5", features = [ "fs-read-dir", "fs-create-dir", "fs-write-file", "fs-exists", "fs-read-file", "window-close", "window-hide", "window-create", "clipboard-write-text", "clipboard-read-text", "cli", "shell-open", "config-json5" ] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1", features = [ "full" ] }
url = { version = "2", features = ["serde"] }
whoami = "1.4.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
