[package]
name = "arsd"
version = "0.1.7"
description = "AWS Role Speed Dial"
authors = ["Ryan Scott Brown <sb@ryansb.com>"]
license = "MIT"
repository = "https://github.com/ryansb/arsd"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [ "config-json5" ] }

[dependencies]
aws-config = "1.0.1"
aws-sdk-sso = "1.2.0"
aws-sdk-ssooidc = "1.2.0"
aws-types = "1.0.1"
chrono = { version = "0.4.31", features = [ "serde" ] }
config = { version = "0.13.1", features = [ "yaml" ] }
log = "^0.4"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = [ "json" ] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", ] }
serde = { version = "1.0", features = [ "derive" ] }
serde-aux = "*"
serde_derive = "1.0.192"
serde_ini = "*"
serde_json = "1.0"
serde_rusqlite = "0.33.1"
tauri = { version = "2", features = [ "config-json5" ] }
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-fs = "2"
tauri-plugin-log = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = { version = "2" }
tokio = { version = "1", features = [ "full" ] }
url = { version = "2", features = ["serde"] }
whoami = "1.4.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
